Modify video card for Spiderman and add Ratchet & Clank section
Updated video information and added a new section for Ratchet & Clank.

--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
     <section class="content video-card" aria-label="Reel">
       <h2 class="h1">Spiderman 2 Technical Art Reel</h2>
       <div class="video">
-        <iframe src="https://player.vimeo.com/video/933041946?h=9e9a0c7d5f&title=0&byline=0&portrait=0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Matthew R. Tucker Reel"></iframe>
+        <iframe src="https://player.vimeo.com/video/933041946?h=9e9a0c7d5f&title=0&byline=0&portrait=0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Spiderman 2 Reel"></iframe>
       </div>
 
       <!-- Collapsible: Reel Breakdown -->
       <details class="accordion">
         <summary aria-label="Toggle breakdown"><span class="caret">▶</span> Reel Breakdown</summary>
         <div class="accordion-inner">
-          <div class="breakdown" aria-label="Reel Breakdown Content">
+          <div class="breakdown" aria-label="Reel Breakdown">
             <div class="section">
               <h3>Venom</h3>
               <ul>
@@ -187,8 +187,6 @@
               </ul>
             </div>
 
-            <hr />
-
             <div class="section">
               <h3>Not featured in the reel, and shoutouts</h3>
               <ul>
@@ -220,7 +218,6 @@
         </div>
       </details>
     </section>
-
     <!-- TEMPLATE for additional videos:
     <section class="content video-card" aria-label="Another Reel">
       <h2 class="h1">[Video Title]</h2>
@@ -234,6 +231,29 @@
         </div>
       </details>
     </section>
+    
+    </section>
+    <section class="content video-card" aria-label="Ratchet &amp; Clank: Rift Apart Technical Art Reel">
+      <h2 class="h1">Ratchet &amp; Clank: Rift Apart Technical Art Reel</h2>
+      <div class="video">
+        <iframe src="https://player.vimeo.com/video/784464739?title=0&byline=0&portrait=0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Rift Apart Reel"></iframe>
+      </div>
+      <details class="accordion">
+        <summary><span class="caret">▶</span>Reel Breakdown</summary>
+        <div class="accordion-inner">
+          <p>I was welcomed onto this project late into production and my tasks were to evaluate the main characters, Ratchet and Rivet, and help get them across the finish line. A lot of amazing work had already been done on them from Sol Brennan and Adam Engel, so it made the polish work quite fun. The majority of what I had done was polishing a lot of the face shapework myself (a process that used to be passed back and forth between rigging and modeling), creating new shapes (creating corner poses for the mouth shapes were especially useful), and absorbing all the armors that were delivered at the 11th hour.</p>
+          <div class="breakdown">
+            <h3>Reel Breakdown:</h3>
+            <ul>
+              <li>Ratchet face polish</li>
+              <li>Armor rigging/workflow (optimized process so individual Character TDs could absorb all armors)</li>
+              <li>Rivet face polish</li>
+            </ul>
+          </div>
+        </div>
+      </details>
+    </section>
+
   </main>
 </body>
 </html>
