Improve iframe formatting and summary spacing
Refactor iframe attributes for better readability and fix summary spacing.

--- a/index.html
+++ b/index.html
@@ -236,10 +236,13 @@
     <section class="content video-card" aria-label="Ratchet &amp; Clank: Rift Apart Technical Art Reel">
       <h2 class="h1">Ratchet &amp; Clank: Rift Apart Technical Art Reel</h2>
       <div class="video">
-        <iframe src="https://player.vimeo.com/video/784464739?title=0&byline=0&portrait=0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Rift Apart Reel"></iframe>
+        <iframe src="https://player.vimeo.com/video/784464739?title=0&byline=0&portrait=0"
+                allow="autoplay; fullscreen; picture-in-picture"
+                allowfullscreen
+                title="Rift Apart Reel"></iframe>
       </div>
       <details class="accordion">
-        <summary><span class="caret">▶</span>Reel Breakdown</summary>
+        <summary><span class="caret">▶</span> Reel Breakdown</summary>
         <div class="accordion-inner">
           <p>I was welcomed onto this project late into production and my tasks were to evaluate the main characters, Ratchet and Rivet, and help get them across the finish line. A lot of amazing work had already been done on them from Sol Brennan and Adam Engel, so it made the polish work quite fun. The majority of what I had done was polishing a lot of the face shapework myself (a process that used to be passed back and forth between rigging and modeling), creating new shapes (creating corner poses for the mouth shapes were especially useful), and absorbing all the armors that were delivered at the 11th hour.</p>
           <div class="breakdown">
