Add video card for Autodesk Bifrost tutorial series
Added a new video card section for Autodesk Bifrost Rigging Modules Tutorial Series.

--- a/index.html
+++ b/index.html
@@ -263,6 +263,31 @@
         </div>
       </details>
     </section>
+    <!-- VIDEO CARD 3 -->
+    <section class="content video-card" aria-label="Autodesk Bifrost Tutorial Series">
+      <h2 class="h1">Autodesk Bifrost Rigging Modules Tutorial Series</h2>
+      <div class="video">
+        <iframe
+          src="https://www.youtube.com/embed/videoseries?list=PL8hZ6hQCGHMXKrjYPMCPC0A7XXHDryA45"
+          title="Autodesk Bifrost Rigging Modules Tutorial Series"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen>
+        </iframe>
+      </div>
+    
+      <details class="accordion">
+        <summary><span class="caret">▶</span> Playlist Description</summary>
+        <div class="accordion-inner">
+          <p>
+            Collaborated with Autodesk to design and implement a modular biped rig built with
+            Bifrost Rigging Modules, showcasing procedural workflows and advanced animation controls.
+            The resulting tutorial series demonstrates how to create, customize,
+            and integrate Bifrost rigging modules—empowering future artists and technical teams to
+            explore a new procedural approach to rigging and animation.
+          </p>
+        </div>
+      </details>
+    </section>
   </main>
 </body>
 </html>
