Add video card for Unreal Engine 5.5 Shark Kitty Fan Art
Added a new video card section for Unreal Engine 5.5 Shark Kitty Fan Art, including project description and details about the animation and rigging features explored.

--- a/index.html
+++ b/index.html
@@ -288,6 +288,41 @@
         </div>
       </details>
     </section>
+    <!-- VIDEO CARD 4 -->
+    <section class="content video-card" aria-label="Unreal Engine 5.5 Shark Kitty Fan Art">
+      <h2 class="h1">Unreal Engine 5.5 — Shark Kitty Fan Art</h2>
+      <div class="video">
+        <iframe
+          src="https://player.vimeo.com/showcase/11933133/embed"
+          title="Unreal Engine 5.5 — Shark Kitty Fan Art"
+          allow="autoplay; fullscreen; picture-in-picture"
+          allowfullscreen>
+        </iframe>
+      </div>
+    
+      <details class="accordion">
+        <summary><span class="caret">▶</span> Project Description</summary>
+        <div class="accordion-inner">
+          <p>
+            I created this fan-art of Shark Kitty to test Unreal Engine 5.5’s new animation and rigging features.
+            Using Maya for modeling and morph targets, Substance and GIMP for texturing, and Unreal for materials,
+            rigging, and animation, I explored the modular Control Rig system’s potential and limits — specifically
+            how far I could push it considering its limited flexibility for extreme squash and stretch.
+          </p>
+          <p>
+            To meet mobile skeleton constraints (<75 bones), I built custom rig components and designed a custom
+            3-bone IK solution that maintained consistent femur and tarsal alignment, including a procedural
+            secondary IK chain driven by iterative “For Loop” nodes.
+          </p>
+          <p>
+            This project was a deep dive into Unreal’s evolving rigging ecosystem. While powerful, it’s still maturing;
+            despite some friction with vertex selection and morph-target stacking, the process showcased Unreal’s
+            promise as a standalone DCC for animation. Many thanks to Peter Sandeman and Warren Wang for their help,
+            and full credit to Yogin, the original creator of Shark Kitty.
+          </p>
+        </div>
+      </details>
+    </section>
   </main>
 </body>
 </html>
