Update title and aria-label for video card section

--- a/index.html
+++ b/index.html
@@ -289,12 +289,12 @@
       </details>
     </section>
     <!-- VIDEO CARD 4 -->
-    <section class="content video-card" aria-label="Unreal Engine 5.5 Shark Kitty Fan Art">
-      <h2 class="h1">Unreal Engine 5.5 — Shark Kitty Fan Art</h2>
+    <section class="content video-card" aria-label="Unreal Engine Shark Kitty Fan Art">
+      <h2 class="h1">Unreal Engine Shark Kitty Fan Art</h2>
       <div class="video">
         <iframe
           src="https://player.vimeo.com/showcase/11933133/embed"
-          title="Unreal Engine 5.5 — Shark Kitty Fan Art"
+          title="Unreal Engine Shark Kitty Fan Art"
           allow="autoplay; fullscreen; picture-in-picture"
           allowfullscreen>
         </iframe>
