Update video card section for Unreal Engine content

--- a/index.html
+++ b/index.html
@@ -289,17 +289,16 @@
       </details>
     </section>
     <!-- VIDEO CARD 4 -->
-    <section class="content video-card" aria-label="Unreal Engine Shark Kitty Fan Art">
-      <h2 class="h1">Unreal Engine Shark Kitty Fan Art</h2>
+    <section class="content video-card" aria-label="Unreal Engine Rigging &amp; Animation Exploration">
+      <h2 class="h1">Unreal Engine Rigging & Animation Exploration</h2>
       <div class="video">
         <iframe
           src="https://player.vimeo.com/showcase/11933133/embed"
-          title="Unreal Engine Shark Kitty Fan Art"
+          title="Unreal Engine Rigging &amp; Animation Exploration"
           allow="autoplay; fullscreen; picture-in-picture"
           allowfullscreen>
         </iframe>
       </div>
-    
       <details class="accordion">
         <summary><span class="caret">▶</span> Project Description</summary>
         <div class="accordion-inner">
