Refactor project description for conciseness
Condensed project description and improved clarity.

--- a/index.html
+++ b/index.html
@@ -304,19 +304,15 @@
         <div class="accordion-inner">
           <p>
             I created this fan-art of Shark Kitty to test Unreal Engine 5.5’s new animation and rigging features.
-            Using Maya for modeling and morph targets, Substance and GIMP for texturing, and Unreal for materials,
-            rigging, and animation, I explored the modular Control Rig system’s potential and limits — specifically
-            how far I could push it considering its limited flexibility for extreme squash and stretch.
-          </p>
-          <p>
-            To meet mobile skeleton constraints (<75 bones), I built custom rig components and designed a custom
-            3-bone IK solution that maintained consistent femur and tarsal alignment, including a procedural
-            secondary IK chain driven by iterative “For Loop” nodes.
-          </p>
-          <p>
-            This project was a deep dive into Unreal’s evolving rigging ecosystem. While powerful, it’s still maturing;
-            despite some friction with vertex selection and morph-target stacking, the process showcased Unreal’s
-            promise as a standalone DCC for animation. Many thanks to Peter Sandeman and Warren Wang for their help,
+            Using Maya for modeling and morph targets, Substance and GIMP for texturing, and Unreal for materials, rigging, and animation,
+            I explored the modular Control Rig system’s potential and limits. Specifically how far I could push it considering it's
+            limited flexibility for extreme squash and stretch. To meet mobile skeleton constraints (<75 bones),
+            I built custom rig components and designed a custom 3-bone IK solution that maintained consistent femur and tarsal alignment,
+            including a procedural secondary IK chain driven by iterative “For Loop” nodes. This project was a deep dive
+            into Unreal’s evolving rigging ecosystem. While powerful yet it's still maturing.
+            Despite some friction with vertex selection and morph-target stacking,
+            the process showcased Unreal’s promise as a standalone DCC for animation.
+            Many thanks to Peter Sandeman and Warren Wang for their help,
             and full credit to Yogin, the original creator of Shark Kitty.
           </p>
         </div>
