--- a/index.html
+++ b/index.html
@@ -294,9 +294,10 @@
       <div class="video">
         <iframe
           src="https://player.vimeo.com/showcase/11933133/embed"
-          title="Unreal Engine Rigging &amp; Animation Exploration"
+          title="Unreal Engine Rigging & Animation Exploration"
           allow="autoplay; fullscreen; picture-in-picture"
-          allowfullscreen>
+          allowfullscreen
+          style="border:0;width:100%;height:100%;position:absolute;inset:0">
         </iframe>
       </div>
       <details class="accordion">
