--- a/index.html
+++ b/index.html
@@ -293,8 +293,7 @@
       <h2 class="h1">Unreal Engine Rigging & Animation Exploration</h2>
       <div class="video">
         <iframe
-          src="https://player.vimeo.com/showcase/11933133/embed"
-          title="Unreal Engine Rigging & Animation Exploration"
+          src="https://player.vimeo.com/video/VIDEO_ID?h=H_TOKEN&title=0&byline=0&portrait=0"
           allow="autoplay; fullscreen; picture-in-picture"
           allowfullscreen
           style="border:0;width:100%;height:100%;position:absolute;inset:0">
