--- a/index.html
+++ b/index.html
@@ -156,7 +156,12 @@
     <section class="content video-card" aria-label="Reel">
       <h2 class="h1">Spiderman 2 Technical Art Reel</h2>
       <div class="video">
-        <iframe src="https://player.vimeo.com/video/933041946?h=9e9a0c7d5f&title=0&byline=0&portrait=0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Spiderman 2 Reel"></iframe>
+        <iframe
+          src="https://player.vimeo.com/video/933041946?h=9e9a0c7d5f&title=0&byline=0&portrait=0"
+          allow="autoplay; fullscreen; picture-in-picture"
+          allowfullscreen
+          title="Spiderman 2 Reel">
+        </iframe>
       </div>
 
       <details class="accordion">
@@ -243,10 +248,12 @@
     <section class="content video-card" aria-label="Ratchet &amp; Clank: Rift Apart Technical Art Reel">
       <h2 class="h1">Ratchet &amp; Clank: Rift Apart Technical Art Reel</h2>
       <div class="video">
-        <iframe src="https://player.vimeo.com/video/784464739?title=0&byline=0&portrait=0"
-                allow="autoplay; fullscreen; picture-in-picture"
-                allowfullscreen
-                title="Rift Apart Reel"></iframe>
+        <iframe
+          src="https://player.vimeo.com/video/784464739?title=0&byline=0&portrait=0"
+          allow="autoplay; fullscreen; picture-in-picture"
+          allowfullscreen
+          title="Rift Apart Reel">
+        </iframe>
       </div>
       <details class="accordion">
         <summary><span class="caret">▶</span> Reel Breakdown</summary>
@@ -293,7 +300,7 @@
       <h2 class="h1">Unreal Engine Rigging & Animation Exploration</h2>
       <div class="video">
         <iframe          
-          src='https://vimeo.com/showcase/11933133/embed2'
+          src='https://vimeo.com/showcase/11933133?video=1049030338'
           allow="autoplay; fullscreen; picture-in-picture"
           allowfullscreen
           style="border:0;width:100%;height:100%;position:absolute;inset:0">
