Modify video iframe source and styles
Updated iframe source for video player and adjusted styles.

--- a/index.html
+++ b/index.html
@@ -299,11 +299,11 @@
     <section class="content video-card" aria-label="Unreal Engine Rigging &amp; Animation Exploration">
       <h2 class="h1">Unreal Engine Rigging & Animation Exploration</h2>
       <div class="video">
-        <iframe          
-          src='https://vimeo.com/showcase/11933133?video=1049030338'
+        <iframe
+          src="https://player.vimeo.com/video/1049030338?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
           allow="autoplay; fullscreen; picture-in-picture"
-          allowfullscreen
-          style="border:0;width:100%;height:100%;position:absolute;inset:0">
+          style="position:absolute;top:0;left:0;width:100%;height:100%;"
+          title="yawn">
         </iframe>
       </div>
       <details class="accordion">
