--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
       <h2 class="h1">Unreal Engine Rigging & Animation Exploration</h2>
       <div class="video">
         <iframe
-          src="https://player.vimeo.com/video/1049030338?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+          src="https://player.vimeo.com/video/1128299171?title=0&byline=0&portrait=0"
           allow="autoplay; fullscreen; picture-in-picture"
           style="position:absolute;top:0;left:0;width:100%;height:100%;"
           title="yawn">
