Add Painterly Look Test video card section
Added a new video card section for the Painterly Look Test with an iframe and description.

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
           src="https://player.vimeo.com/video/1128299171?title=0&byline=0&portrait=0"
           allow="autoplay; fullscreen; picture-in-picture"
           style="position:absolute;top:0;left:0;width:100%;height:100%;"
-          title="yawn">
+          title="Unreal Engine Exploration">
         </iframe>
       </div>
       <details class="accordion">
@@ -321,6 +321,28 @@
             the process showcased Unreal’s promise as a standalone DCC for animation.
             Many thanks to Peter Sandeman and Warren Wang for their help,
             and full credit to Yogin, the original creator of Shark Kitty.
+          </p>
+        </div>
+      </details>
+    </section>
+    <!-- VIDEO CARD 5 -->
+    <section class="content video-card" aria-label="Painterly Look Test">
+      <h2 class="h1">Painterly Look Test</h2>
+      <div class="video">
+        <iframe
+          src="https://player.vimeo.com/video/394362759?title=0&byline=0&portrait=0"
+          allow="autoplay; fullscreen; picture-in-picture"
+          style="position:absolute;top:0;left:0;width:100%;height:100%;"
+          title="Painterly Look Test">
+        </iframe>
+      </div>
+      <details class="accordion">
+        <summary><span class="caret">▶</span> Test Description</summary>
+        <div class="accordion-inner">
+          <p>
+            This look test was created for a short film I was directing at DreamWorks, exploring the visual style and character rendering. Special thanks to the talented artists who brought this to life:
+            Modeling: Hyun Huh
+            LookDev & FX: Yancy Lindquist
           </p>
         </div>
       </details>
