Refine paragraph on Bifrost rigging modules
Removed redundant phrase and improved clarity.

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             Collaborated with Autodesk to design and implement a modular biped rig built with
             Bifrost Rigging Modules, showcasing procedural workflows and advanced animation controls.
             The resulting tutorial series demonstrates how to create, customize,
-            and integrate Bifrost rigging modules—empowering future artists and technical teams to
+            and integrate Bifrost rigging modules. Hopefully empowering future artists and technical teams to
             explore a new procedural approach to rigging and animation.
           </p>
         </div>
