--- a/index.html
+++ b/index.html
@@ -340,9 +340,36 @@
         <summary><span class="caret">▶</span> Test Description</summary>
         <div class="accordion-inner">
           <p>
-            This look test was created for a short film I was directing at DreamWorks, exploring the visual style and character rendering. Special thanks to the talented artists who brought this to life:
-            Modeling: Hyun Huh
-            LookDev & FX: Yancy Lindquist
+            <p>This look test was created for a short film I was directing at DreamWorks, exploring the visual style and character rendering. Special thanks to the talented artists who brought this to life:</p>
+            <p>Modeling: Hyun Huh</p>
+            <p>LookDev & FX: Yancy Lindquist</p>
+          </p>
+        </div>
+      </details>
+    </section>
+    <!-- VIDEO CARD 6 -->
+    <section class="content video-card" aria-label="Bad Guys Rigging Lead Showreel">
+      <h2 class="h1">Bad Guys Rigging Lead Showreel</h2>
+      <div class="video">
+        <iframe
+          src="https://player.vimeo.com/video/779026055?title=0&byline=0&portrait=0"
+          allow="autoplay; fullscreen; picture-in-picture"
+          style="position:absolute;top:0;left:0;width:100%;height:100%;"
+          title="Bad Guys Rigging Lead Showreel">
+        </iframe>
+      </div>
+      <details class="accordion">
+        <summary><span class="caret">▶</span> Reel Breakdown</summary>
+        <div class="accordion-inner">
+          <p>
+            <p>As the Body Rigging Lead for Bad Guys my responsibilities were to establish standards across the show, help develop techniques to achieve unique look for the film, and build workflows for artists to adopt in order to deliver in a timely manner. A good example of this was a workflow for integrating wardrobe seamlessly with stylized wrinkles published by rigging artists</p>
+            <h3>Reel Breakdown:</h3>
+            <ul>
+              <li>Wolf Body</li>
+              <li>Eyeliner and eye stunt effects geometry/rig system for all characters across the film</li>
+              <li>Police Chief Body</li>
+              <li>Shark Face, Body</li>
+            </ul>
           </p>
         </div>
       </details>
