Revise Body Rigging Lead responsibilities description
Updated the description of responsibilities as Body Rigging Lead for The Bad Guys, enhancing clarity and detail.

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
         <summary><span class="caret">▶</span> Reel Breakdown</summary>
         <div class="accordion-inner">
           <p>
-            <p>As the Body Rigging Lead for Bad Guys my responsibilities were to establish standards across the show, help develop techniques to achieve unique look for the film, and build workflows for artists to adopt in order to deliver in a timely manner. A good example of this was a workflow for integrating wardrobe seamlessly with stylized wrinkles published by rigging artists</p>
+            <p>As the Body Rigging Lead for The Bad Guys, my responsibilities were to establish standards across the show, help develop techniques to achieve the film’s distinctive stylized look, and build workflows that artists could adopt to deliver high-quality work efficiently. A good example of this was a workflow for integrating wardrobe seamlessly with stylized wrinkles, published by the rigging team. Beyond the technical aspects, one of the most rewarding parts of the role was mentoring artists. Helping them expand their skills, get them confident in using proprietary software, and contribute their own creative problem-solving to the pipeline.</p>
             <h3>Reel Breakdown:</h3>
             <ul>
               <li>Wolf Body</li>
