Add video card for Trolls World Tour showreel
Added a new video card section for the 'Trolls World Tour Rigging Lead Showreel' including an iframe and details about the rigging work.

--- a/index.html
+++ b/index.html
@@ -374,6 +374,26 @@
         </div>
       </details>
     </section>
+    <!-- VIDEO CARD 7 -->
+    <section class="content video-card" aria-label="Trolls World Tour Rigging Lead Showreel">
+      <h2 class="h1">Trolls World Tour Rigging Lead Showreel</h2>
+      <div class="video">
+        <iframe
+          src="https://player.vimeo.com/video/409686605?title=0&byline=0&portrait=0"
+          allow="autoplay; fullscreen; picture-in-picture"
+          style="position:absolute;top:0;left:0;width:100%;height:100%;"
+          title="Trolls World Tour Rigging Lead Showreel">
+        </iframe>
+      </div>
+      <details class="accordion">
+        <summary><span class="caret">▶</span> Reel Breakdown</summary>
+        <div class="accordion-inner">
+          <p>
+            <p>As a rigging lead on Trolls World Tour I managed character and prop setup, including rigging, weighting, and skinning, increasing delivery speed by 200%, saving ~50 man-weeks.  I also had the opportunity to rig approximately 74 bodies, faces, creatures and props. That ended up being about ~0.95 rigs a week. Although that doesn’t include the hundreds of hair/wardrobe assets I installed as well (I didn't have a good way to figure that number out).</p>
+          </p>
+        </div>
+      </details>
+    </section>
   </main>
 </body>
 </html>
