--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
+  <meta property="og:title" content="Matthew R. Tucker — Technical Artist" />
+  <meta property="og:description" content="A Technical Artist specializing in rigging, animation, and pipeline development for games and film." />
+  <meta property="og:url" content="https://tuckertd.com/" />
+  <meta property="og:image" content="https://tuckertd.com/thumbnail.jpg" />
+  <meta property="og:type" content="website" />
+  <meta name="description" content="Portfolio of Matthew R. Tucker — Technical Artist specializing in rigging, animation, and procedural pipelines for games and film." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Matthew R. Tucker — Technical Artist</title>
   <style>
