Add favicon links to index.html
Added favicon links for different sizes.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
+  <link rel="icon" type="image/png" sizes="16x16" href="robot_icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="robot_icon.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="robot_icon.png" />
   <meta property="og:title" content="Matthew R. Tucker — Technical Artist" />
   <meta property="og:description" content="A Technical Artist specializing in rigging, animation, and pipeline development for games and film." />
   <meta property="og:url" content="https://tuckertd.com/" />
